DOC-1824: Added missing services releases information (#2534)
* DOC-1824: Fixed minor issues in the release notes

* DOC-1824: Added server side updates and accompanying security fixes

* DOC-1824: provides -> includes

--- a/_new_content_templates/releasenotes_blank/x_y_z-release-notes-core-fixes.adoc
+++ b/_new_content_templates/releasenotes_blank/x_y_z-release-notes-core-fixes.adoc
@@ -7,6 +7,6 @@ Replace vnumtxt with the version number such as: X.Y.Z
 :description: Bug fixes for TinyMCE vnumtxt
 :keywords: releasenotes, bugfixes
 
-{productname} vnumtxt provides fixes for the following bugs:
+{productname} vnumtxt includes fixes for the following bugs:
 
 * changelog
