--- a/_new_content_templates/releasenotes_blank/x_y_z-release-notes-core-security-fixes.adoc
+++ b/_new_content_templates/releasenotes_blank/x_y_z-release-notes-core-security-fixes.adoc
@@ -7,6 +7,6 @@ Replace vnumtxt with the version number such as: X.Y.Z
 :description: Security fixes in TinyMCE vnumtxt
 :keywords: releasenotes, bugfixes, security
 
-{productname} vnumtxt provides fixes for the following security issues:
+{productname} vnumtxt includes fixes for the following security issues:
 
 * changelog
