--- a/_new_content_templates/releasenotes_blank/x_y_z-release-notes-premium-changes.adoc
+++ b/_new_content_templates/releasenotes_blank/x_y_z-release-notes-premium-changes.adoc
@@ -69,6 +69,7 @@ The {productname} vnumtxt release includes accompanying changes affecting the {p
 * Enhanced Image Editing plugin (`editimage`)
 * Link Checker plugin (`linkchecker`)
 * Spell Checker Pro plugin (`tinymcespellchecker`)
+* Spelling Autocorrect plugin (`autocorrect`)
 
 The Java server-side components have been updated to the following versions:
 
@@ -83,6 +84,7 @@ For information on:
 * The Enhanced Image Editing plugin, see: xref:editimage.adoc[Enhanced Image Editing plugin].
 * The Link Checker plugin, see: xref:linkchecker.adoc[Link Checker plugin].
 * The Spell Checker Pro plugin, see: xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro plugin].
+* The Spelling Autocorrect plugin, see: xref:autocorrect.adoc[Spelling Autocorrect plugin].
 * Deploying the server-side components, see: xref:introduction-to-premium-selfhosted-services.adoc[Server-side component installation].
 
 === Updating the self-hosted server-side components
