--- a/modules/ROOT/partials/misc/premium-upgrade-promotion-option.adoc
+++ b/modules/ROOT/partials/misc/premium-upgrade-promotion-option.adoc
@@ -1,3 +1,4 @@
+[[premium-upgrade-promotion-option]]
 == Premium upgrade promotion option
 
 include::partial$configuration/promotion.adoc[leveloffset=+1]
