--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -391,12 +391,14 @@
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
 *** TinyMCE 6.2
 **** xref:6.2-release-notes.adoc#overview[Overview]
-**** xref:6.2-release-notes.adoc#ref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
+**** xref:6.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
 **** xref:6.2-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+**** xref:6.2-release-notes.adoc#accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
 **** xref:6.2-release-notes.adoc#improvements[Improvements]
 **** xref:6.2-release-notes.adoc#additions[Additions]
 **** xref:6.2-release-notes.adoc#changes[Changes]
 **** xref:6.2-release-notes.adoc#bug-fixes[Bug fixes]
+**** xref:6.2-release-notes.adoc#security-fixes[Security fixes]
 **** xref:6.2-release-notes.adoc#deprecated[Deprecated]
 **** xref:6.2-release-notes.adoc#known-issues[Known issues]
 *** TinyMCE 6.1.2
