--- a/modules/ROOT/pages/6.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.2-release-notes.adoc
@@ -14,10 +14,12 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 * xref:new-premium-plugins[New Premium plugins]
 * xref:accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
 * xref:accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+* xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
 * xref:improvements[Improvements]
 * xref:additions[Additions]
 * xref:changes[Changes]
 * xref:bug-fixes[Bug fixes]
+* xref:security-fixes[Security fixes]
 * xref:deprecated[Deprecated]
 * xref:known-issues[Known issues]
 
@@ -148,6 +150,49 @@ Two new icons were added to all icon packs: `addtag` and `footnote`.
 The **Premium Skins and Icon Packs** were rebuilt to pull in the changes also incorporated into the default {productname} 6.2 skin, Oxide.
 
 For information on using premium skins and icon packs, see: xref:premium-skins-and-icons.adoc[Premium Skins and Icon Packs].
+
+[[accompanying-premium-self-hosted-server-side-component-changes]]
+== Accompanying Premium self-hosted server-side component changes
+
+The {productname} 6.2 release includes accompanying changes affecting the {productname} **self-hosted** services for the following plugins:
+
+* Enhanced Media Embed plugin (`mediaembed`)
+* Export plugin (`export`)
+* Enhanced Image Editing plugin (`editimage`)
+* Link Checker plugin (`linkchecker`)
+* Spell Checker Pro plugin (`tinymcespellchecker`)
+* Spelling Autocorrect plugin (`autocorrect`)
+
+The Java server-side components have been updated to the following versions:
+
+* `ephox-hyperlinking.war`: 2.105.13
+* `ephox-image-proxy.war`: 2.106.4
+* `ephox-spelling.war`: 2.118.6
+
+For information on:
+
+* The Enhanced Media Embed plugin, see: xref:introduction-to-mediaembed.adoc[Enhanced Media Embed plugin].
+* The Export plugin, see: xref:export.adoc[Export plugin].
+* The Enhanced Image Editing plugin, see: xref:editimage.adoc[Enhanced Image Editing plugin].
+* The Link Checker plugin, see: xref:linkchecker.adoc[Link Checker plugin].
+* The Spell Checker Pro plugin, see: xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro plugin].
+* The Spelling Autocorrect plugin, see: xref:autocorrect.adoc[Spelling Autocorrect plugin].
+* Deploying the server-side components, see: xref:introduction-to-premium-selfhosted-services.adoc[Server-side component installation].
+
+=== Updating the self-hosted server-side components
+
+The new versions of the server-side services provide updates for the Java-based server-side components. To deploy the updated version of the server-side components:
+
+. Update your Java Application Server to the minimum required version:
+
+include::partial$misc/supported-application-servers.adoc[]
+
+. Replace the existing server-side `.war` files with the `.war` files bundled with {productname} vnumtxt or later.
+
+For information on:
+
+* Deploying the server-side components, see: xref:introduction-to-premium-selfhosted-services.adoc[Server-side component installation].
+* Deploying the server-side components using Docker, see: xref:bundle-intro-setup.adoc[Containerized service deployments].
 
 
 [[improvements]]
@@ -292,7 +337,7 @@ In {productname} 6.2, the Autolink plugin is now able to handle this text node f
 
 As part of switching to TypeScript’s strict mode, multiple public {productname} APIs were found to be typed incorrectly.
 
-These types have been corrected types in {productname} 6.2. 
+These types have been corrected types in {productname} 6.2.
 
 === The number of blank lines returned from `editor.getContent({format: 'text'})` differed between browsers
 
@@ -364,7 +409,7 @@ In particular, this includes ensuring that formatting is not directly removed fr
 
 === Spaces could be incorrectly added to `urlinput` dialog components in certain cases
 
-The handling of spaces inserted into the xref:dialog-components.adoc#urlinput[UrlInput] dialog component, specifically its implementation in the xref:link[Link Dialog], was inconsistent.
+The handling of spaces inserted into the xref:dialog-components.adoc#urlinput[UrlInput] dialog component, specifically its implementation in the xref:link.adoc[Link Dialog], was inconsistent.
 
 It allowed spaces to be entered when it was empty and the text input contained text, but did not allow spaces to be entered when both fields were empty.
 
@@ -395,7 +440,7 @@ In {productname} 6.2, dragging elements with `contenteditable=false` attributes 
 
 === Parsing large documents no longer throws a Maximum call stack size exceeded exception
 
-Previously, parsing very large documents would throw an error to the console that they had exceeded the Maximum call stack size. 
+Previously, parsing very large documents would throw an error to the console that they had exceeded the Maximum call stack size.
 
 For example:
 
@@ -471,6 +516,14 @@ The presented list was not entirely alphabetical, however.
 
 With this update Premium plugin names are, now, correctly sorted in alphabetical order by name.
 
+[[security-fixes]]
+== Security fixes
+
+{productname} 6.2 includes fixes for the following security issues:
+
+All 3 server-side components have been updated to include dependency updates addressing security issues. This includes Medium severity vulnerability fixes.
+
+For information on the server-side components updates, see: xref:#accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes].
 
 [[deprecated]]
 == Deprecated
