DOC-1875: added linked CVE number and attribution to XSS vulnerability section of 6.3 Release Notes. (#2591)
* DOC-1875: 6.3-release-notes.adoc

Added linked CVE number and attribution to XSS vulnerability section.

* Update modules/ROOT/pages/6.3-release-notes.adoc

--- a/modules/ROOT/pages/6.3-release-notes.adoc
+++ b/modules/ROOT/pages/6.3-release-notes.adoc
@@ -615,6 +615,10 @@ As of {productname} 6.3, HTML being provided to the DOM for presentation in {pro
 
 This sanitizing closes the XSS vulnerability.
 
+CVE: https://www.cve.org/CVERecord?id=CVE-2022-23494[CVE-2022-23494].
+
+NOTE: Tiny Technologies would like to thank https://p4rkjw.com/[P4rkJW] for discovering this vulnerability.
+
 [[known-issues]]
 == Known issues
 
