--- a/modules/ROOT/pages/security.adoc
+++ b/modules/ROOT/pages/security.adoc
@@ -25,7 +25,15 @@ NOTE: The following is _general_ security advice that may be relevant to a websi
 [[reporting-tinymce-security-issues]]
 == [[reportingtinymcesecurityissues]] Reporting TinyMCE security issues
 
-{companyname} values the work of security researchers in improving the security of technology products worldwide. We welcome researchers who wish to responsibly disclose vulnerabilities in our products or systems. Note that we do not offer any “bug bounty” program or any form of payment for disclosed vulnerabilities. If you would like to report a vulnerability, please email `+infosec@tiny.cloud+`.
+{companyname} values the work of security researchers in improving the security of technology products worldwide. We welcome researchers who wish to responsibly disclose vulnerabilities in our products or systems.
+
+Note that we do not offer any “bug bounty” program or any form of payment for disclosed vulnerabilities.
+
+To report a potential security vulnerability, contact our Security team at mailto:infosec@tiny.cloud[infosec@tiny.cloud,Potential vulnerability report].
+
+In line with the United States National Infrastructure Advisory Council (NIAC) https://dhs.gov/xlibrary/assets/vdwgreport.pdf[Vulnerability Disclosure Framework] (PDF link), Tiny requests community members reporting potential security vulnerabilities maintain the confidentiality of their report and discovery until Tiny has investigated the issue and taken action to fix it.
+
+Tiny will communicate with you regarding the status of your report and will, with your permission, publicly attribute the security issue’s discovery to you after the issue has been fixed and disclosed.
 
 [[what-we-do-to-maintain-security-for-tinymce]]
 == What we do to maintain security for TinyMCE
