--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -394,12 +394,9 @@
 *** TinyMCE 6.3.2
 **** xref:6.3.2-release-notes.adoc#overview[Overview]
 **** xref:6.3.2-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
-**** xref:6.3.2-release-notes.adoc#improvements[Improvements]
-**** xref:6.3.2-release-notes.adoc#additions[Additions]
-**** xref:6.3.2-release-notes.adoc#changes[Changes]
-**** xref:6.3.2-release-notes.adoc#bug-fixes[Bug fixes]
-**** xref:6.3.2-release-notes.adoc#security-fixes[Security fixes]
-**** xref:6.3.2-release-notes.adoc#known-issues[Known issues]
+**** xref:6.3.2-release-notes.adoc#bug-fix[Bug fix]
+//**** xref:6.3.2-release-notes.adoc#security-fixes[Security fixes]
+//**** xref:6.3.2-release-notes.adoc#known-issues[Known issues]
 *** TinyMCE 6.3
 **** xref:6.3-release-notes.adoc#overview[Overview]
 **** xref:6.3-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
