--- a/modules/ROOT/pages/security.adoc
+++ b/modules/ROOT/pages/security.adoc
@@ -85,6 +85,8 @@ If user inputs are not properly sanitized server-side, host devices and user dat
 
 For information on Injection-related security issues and how to reduce the risk of an attack, see: https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A1-Injection[OWASP Top Ten 2017 -- Injection].
 
+include::partial$security/sanitizing-html-input-and-protecting-against-xss-attackes-dom-parser-and-dom-purify.adoc[]
+
 [[insecure-transmission-and-storage-of-data]]
 === Insecure Transmission and Storage of data
 
