DOC-1910: security.adoc
Added ‘Sanitizing HTML input to protect against XSS attacks’ xref entry to security.adoc overview section.

--- a/modules/ROOT/pages/security.adoc
+++ b/modules/ROOT/pages/security.adoc
@@ -16,6 +16,7 @@ NOTE: The following is _general_ security advice that may be relevant to a websi
 * xref:general-security-risks-for-user-input-elements[General security risks for user input elements]
 ** xref:cross-site-scripting-xss[Cross-Site Scripting (XSS)]
 ** xref:injection[Injection]
+** xref:sanitizing-html-input-to-protect-against-xss-attacks[Sanitizing HTML input to protect against XSS attacks]
 ** xref:insecure-transmission-and-storage-of-data[Insecure Transmission and Storage of data]
 ** xref:broken-authentication-and-session-management[Broken Authentication and Session Management]
 ** xref:using-components-with-known-vulnerabilities[Using Components with Known Vulnerabilities]
