--- a/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
+++ b/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
@@ -1,7 +1,7 @@
 [[sanitizing-html-input-to-protect-against-xss-attacks]]
 === Sanitizing HTML input to protect against XSS attacks
 
-Previously, before HTML content was passed to {productname} 5.x, it was parsed using an https://tiny.cloud/docs/api/tinymce.html/tinymce.html.saxparser/[in-house developed API], `SaxParser`.
+Previously, before HTML content was passed to {productname} 5.x, it was parsed using an https://github.com/tinymce/tinymce/blob/release/5.10/modules/tinymce/src/core/main/ts/api/html/SaxParser.ts[in-house developed API], `SaxParser`.
 
 The `SaxParser` API was developed in the then-absence of alternatives.
 
