--- a/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
+++ b/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
@@ -36,7 +36,7 @@ When this string is passed in, the `DOMParser` API adds the missing closing anch
 </p>
 ----
 
-Next, the, now correctly formed, DOM object is passed to `DOMPurify`.
+Next, the, now correctly formed, DOM object is passed to DOMPurify.
 
 `DOMPurify` runs a security-focussed ruleset over the DOM object to sanitize the HTML and protect {productname}, and applications built using {productname}, against XSS attacks.
 
