--- a/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
+++ b/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc
@@ -40,7 +40,7 @@ Next, the, now correctly formed, DOM object is passed to DOMPurify.
 
 `DOMPurify` runs a security-focussed ruleset over the DOM object to sanitize the HTML and protect {productname}, and applications built using {productname}, against XSS attacks.
 
-==== Turning `DOMPurify` off
+==== Turning DOMPurify off
 
 Both `DOMParser` and `DOMPurify` are on by default, and `DOMParser` cannot be turned off.
 
