DOC-1927: schema.adoc, invalid_styles.adoc, & 6.3.2-release-notes.adoc
Typo corrections and a copy-edit in three files.

-excluding things that where removed
+excluding things that were removed

-Object format - This is a more complex format where you can specify invalid styles for individual elements.
+Object format - This is a more complex format in which you can specify invalid styles for individual elements.

-* https://nvd.nist.gov/vuln/detail/CVE-2022-41881[CVE-2022-41881]
-* https://nvd.nist.gov/vuln/detail/CVE-2022-41915[CVE-2022-41881]
-* https://nvd.nist.gov/vuln/detail/CVE-2023-22465[CVE-2022-41881]
+* https://nvd.nist.gov/vuln/detail/CVE-2022-41881[CVE-2022-41881]
+* https://nvd.nist.gov/vuln/detail/CVE-2022-41915[CVE-2022-41915]
+* https://nvd.nist.gov/vuln/detail/CVE-2023-22465[CVE-2023-22465]

--- a/modules/ROOT/partials/configuration/invalid_styles.adoc
+++ b/modules/ROOT/partials/configuration/invalid_styles.adoc
@@ -4,7 +4,7 @@
 This option enables you to restrict the styles that are valid for specific elements. It takes two input formats:
 
 * *String format* - This is a list of global styles to disallow.
-* *Object format* - This is a more complex format where you can specify invalid styles for individual elements.
+* *Object format* - This is a more complex format in which you can specify invalid styles for individual elements.
 
 === Simple global classes
 
