DOC-2185: TinyMCE 6.7.1 Release Notes (#9)
* DOC-2185: 6.7.1-release-notes.adoc

Added file, `6.7.1-release-notes.adoc` to project.

Added 6.7.1-specific release notes outline to file.

* DOC-2185: changelog.adoc

Added 6.7.1-specific outline of expected changelog entries.

* DOC-2185: nav.adoc

Added 6.7.1-specific entries to navigation.

* DOC-2185: changelog.md

Added entry for this ticket.

* DOC-2185: release-notess.adoc

Added 6.7.1 release notes table cell.

Tweaked dummy cell as required for the above change.

* DOC-2185: 6.7.1-release-notes.adoc

Added write up of TINY-10180 to security fixes section of the release notes.

* DOC-2185: 6.7.1-release-notes.adoc

Removed outbound twitter link.

* Removed Bug fix placeholders and added GHSA link

* updated GHSA link, replaced mce link with DOM Parser link.

* DOC-2185: added TINY-10286 placeholder, and 10215 title.

* DOC-2185: added draft content for TINY-10286.

* Update modules/ROOT/nav.adoc

* Update modules/ROOT/pages/6.7.1-release-notes.adoc

* Update modules/ROOT/pages/changelog.adoc

* Update modules/ROOT/pages/changelog.adoc

* Update modules/ROOT/pages/6.7.1-release-notes.adoc

* Update modules/ROOT/pages/6.7.1-release-notes.adoc

* Update modules/ROOT/pages/6.7.1-release-notes.adoc

* Update modules/ROOT/pages/changelog.adoc

Co-authored-by: mkzhx <mkzh.org@gmail.com>

* DOC-2185: API-version bump to 6.7.1.

---------

Co-authored-by: bforte <brian.forte@tiny.cloud>
Co-authored-by: mkzhx <mkzh.org@gmail.com>

--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -403,6 +403,9 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
+*** TinyMCE 6.7.1
+**** xref:6.7.1-release-notes.adoc#overview[Overview]
+**** xref:6.7.1-release-notes.adoc#security-fix[Security fix]
 *** TinyMCE 6.7
 **** xref:6.7-release-notes.adoc#overview[Overview]
 **** xref:6.7-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
