DOC-2204: TinyMCE 6.7.3 release docs. (#12)
* DOC-2185: TinyMCE 6.7.1 Release Notes (#9)

* DOC-2185: 6.7.1-release-notes.adoc

Added file, `6.7.1-release-notes.adoc` to project.

Added 6.7.1-specific release notes outline to file.

* DOC-2185: changelog.adoc

Added 6.7.1-specific outline of expected changelog entries.

* DOC-2185: nav.adoc

Added 6.7.1-specific entries to navigation.

* DOC-2185: changelog.md

Added entry for this ticket.

* DOC-2185: release-notess.adoc

Added 6.7.1 release notes table cell.

Tweaked dummy cell as required for the above change.

* DOC-2185: 6.7.1-release-notes.adoc

Added write up of TINY-10180 to security fixes section of the release notes.

* DOC-2185: 6.7.1-release-notes.adoc

Removed outbound twitter link.

* Removed Bug fix placeholders and added GHSA link

* updated GHSA link, replaced mce link with DOM Parser link.

* DOC-2185: added TINY-10286 placeholder, and 10215 title.

* DOC-2185: added draft content for TINY-10286.

* Update modules/ROOT/nav.adoc

* Update modules/ROOT/pages/6.7.1-release-notes.adoc

* Update modules/ROOT/pages/changelog.adoc

* Update modules/ROOT/pages/changelog.adoc

* Update modules/ROOT/pages/6.7.1-release-notes.adoc

* Update modules/ROOT/pages/6.7.1-release-notes.adoc

* Update modules/ROOT/pages/6.7.1-release-notes.adoc

* Update modules/ROOT/pages/changelog.adoc

Co-authored-by: mkzhx <mkzh.org@gmail.com>

* DOC-2185: API-version bump to 6.7.1.

---------

Co-authored-by: bforte <brian.forte@tiny.cloud>
Co-authored-by: mkzhx <mkzh.org@gmail.com>

* Merge remote-tracking branch 'docs/release/docs-6' into base-docs/release-6

* DOC-2204: TinyMCE 6.7.3 release docs.

* Update GHSA outline with finalised content and links

* Update modules/ROOT/pages/6.7.3-release-notes.adoc

* Update modules/ROOT/pages/6.7.3-release-notes.adoc

* Update modules/ROOT/pages/6.7.3-release-notes.adoc

* Update modules/ROOT/pages/6.7.3-re

--- a/modules/ROOT/pages/6.7.1-release-notes.adoc
+++ b/modules/ROOT/pages/6.7.1-release-notes.adoc
@@ -42,8 +42,7 @@ GHSA: https://github.com/tinymce/tinymce/security/advisories/GHSA-v65r-p3vv-jjfv
 
 NOTE: Tiny Technologies would like to thank Masato Kinugawa of https://cure53.de/[Cure53] for discovering this vulnerability.
 
-
-### Notification messages containing HTML were not properly XSS sanitized before being displayed.
+=== Notification messages containing HTML were not properly XSS sanitized before being displayed.
 //#TINY-10286
 
 A https://owasp.org/www-community/attacks/xss/[cross-site scripting] (XSS) vulnerability was discovered in {productname}'s Notification Manager API. The vulnerability exploits {productname}'s unfiltered notification system, which is used in error handling. The conditions for this exploit requires carefully crafted malicious content to have been inserted into the editor and a notification to have been triggered.
