--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -403,6 +403,9 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
+*** TinyMCE 6.7.3
+**** xref:6.7.3-release-notes.adoc#overview[Overview]
+**** xref:6.7.3-release-notes.adoc#security-fix[Security fix]
 *** TinyMCE 6.7.2
 **** xref:6.7.2-release-notes.adoc#overview[Overview]
 **** xref:accompanying-premium-self-hosted-server-side-component-changes[Accompanying Premium self-hosted server-side component changes]
