--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,6 +4,15 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
+== 6.7.3 - 2023-11-15
+
+### Changed
+* Zero width no-break space (U+FEFF) characters are removed from content passed to `setContent`, `insertContent`, and `resetContent` APIs.
+* Zero width no-break space (U+FEFF) characters in initial content are not loaded into the editor upon initialization.
+
+### Fixed
+* Specific HTML content containing unescaped text nodes caused mXSS when using undo/redo.
+* Specific HTML content containing unescaped text nodes caused mXSS when using the `getContent` and `setContent` APIs with the `format: 'raw'` option, which also affected the `resetContent` API and the draft restoration feature of the Autosave plugin.
 
 == 6.7.2 - 2023-10-25
 
